--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "create-room": "node ./rooms/create-room-console.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
