--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
+    "querystring": "^0.2.0",
+    "request": "^2.88.2",
     "simple-peer": "^9.7.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
