--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "forever ./bin/www",
+    "test": "nodemon ./bin/www",
     "create-room": "node ./rooms/create-room-console.js",
     "approve-room": "node ./rooms/create-room-by-database-id.js"
   },
