--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "approve-room": "node ./rooms/create-room-by-database-id.js"
   },
   "dependencies": {
+    "bl": "^4.0.3",
+    "constantinople": "^4.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "forever": "^3.0.2",
     "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongodb": "^3.5.9",
+    "mongodb": "^3.6.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "querystring": "^0.2.0",
@@ -24,7 +27,7 @@
     "simple-peer": "^9.7.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
-    "uuid": "^8.1.0",
+    "uuid": "^8.3.0",
     "webm-cluster-stream": "^1.0.0"
   }
 }
